added dark mode

--- a/index.html
+++ b/index.html
@@ -4,38 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSI4107: Information Retrieval</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <style>
-        .content-wrapper {
-            display: flex;
-            gap: 20px;
-        }
-        .content-wrapper .main-content {
-            flex: 2;
-        }
-        .content-wrapper .lecture-topics {
-            flex: 1;
-            background: #f9f9f9;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .lecture-topics h2 {
-            margin-top: 0;
-        }
-        .lecture-topics ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .lecture-topics ul li {
-            margin-bottom: 10px;
-        }
-    </style>
 </head>
 <body>
     <header>
         <h1>CSI4107: Information Retrieval</h1>
+        <button id="toggle-dark-mode">Dark Mode</button>
     </header>
     <main>
         <div class="content-wrapper">
@@ -117,5 +92,6 @@
     <footer>
         <p>All content © Diana Inkpen | Visit the <a href="https://www.site.uottawa.ca/~diana/csi4107/index.html">course website</a>.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
