opens lectures in new tabs

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
             <aside class="lecture-topics">
                 <h2>Lecture Topics</h2>
                 <ul>
-                    <li><strong>Week 1:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L0.pdf">Preliminaries</a>, <a href="http://www.site.uottawa.ca/~diana/csi4107/L1.pdf">Introduction</a>, and <a href="http://www.site.uottawa.ca/~diana/csi4107/L2.pdf">The Internet and the WWW</a></li>
-                    <li><strong>Week 2:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L3.pdf">Basic IR Models</a></li>
-                    <li><strong>Week 3:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L4.pdf">Experimental Evaluation of IR</a></li>
-                    <li><strong>Week 4:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L5.pdf">Query Operations and Languages</a></li>
-                    <li><strong>Week 5:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L7.pdf">Web Search</a></li>
-                    <li><strong>Week 6:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L8.pdf">Text Categorization</a></li>
+                    <li><strong>Week 1:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L0.pdf" target="_blank">Preliminaries</a>, <a href="http://www.site.uottawa.ca/~diana/csi4107/L1.pdf" target="_blank">Introduction</a>, and <a href="http://www.site.uottawa.ca/~diana/csi4107/L2.pdf" target="_blank">The Internet and the WWW</a></li>
+                    <li><strong>Week 2:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L3.pdf" target="_blank">Basic IR Models</a></li>
+                    <li><strong>Week 3:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L4.pdf" target="_blank">Experimental Evaluation of IR</a></li>
+                    <li><strong>Week 4:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L5.pdf" target="_blank">Query Operations and Languages</a></li>
+                    <li><strong>Week 5:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L7.pdf" target="_blank">Web Search</a></li>
+                    <li><strong>Week 6:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L8.pdf" target="_blank">Text Categorization</a></li>
                     <li><strong>Week 7:</strong> Study Break (Feb 16-23)</li>
                     <li><strong>Week 8:</strong> Midterm Revision and Exam</li>
-                    <li><strong>Week 9:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/NeuralIR.pdf">Neural Information Retrieval</a>, <a href="http://www.site.uottawa.ca/~diana/csi4107/TransformersBERT.pdf">Transformers & BERT</a></li>
-                    <li><strong>Week 10:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L9.pdf">Text Clustering</a></li>
-                    <li><strong>Week 11:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/TopicRankSimple.pdf">Learning to Rank</a></li>
-                    <li><strong>Week 12:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/QA.pdf">Question Answering</a></li>
-                    <li><strong>Week 13:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/Cross-LanguageIR.pdf">Cross-Language IR</a>, <a href="http://www.site.uottawa.ca/~diana/csi4107/ImageIR.pdf">Image Information Retrieval</a></li>
+                    <li><strong>Week 9:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/NeuralIR.pdf" target="_blank">Neural Information Retrieval</a>, <a href="http://www.site.uottawa.ca/~diana/csi4107/TransformersBERT.pdf" target="_blank">Transformers & BERT</a></li>
+                    <li><strong>Week 10:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/L9.pdf" target="_blank">Text Clustering</a></li>
+                    <li><strong>Week 11:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/TopicRankSimple.pdf" target="_blank">Learning to Rank</a></li>
+                    <li><strong>Week 12:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/QA.pdf" target="_blank">Question Answering</a></li>
+                    <li><strong>Week 13:</strong> <a href="http://www.site.uottawa.ca/~diana/csi4107/Cross-LanguageIR.pdf" target="_blank">Cross-Language IR</a>, <a href="http://www.site.uottawa.ca/~diana/csi4107/ImageIR.pdf" target="_blank">Image Information Retrieval</a></li>
                     <li><strong>Week 14:</strong> Exam Revision</li>
                 </ul>
                 <section>
