--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
     </main>
     <footer>
-        <p>All content © Diana Inkpen | Visit the <a href="https://www.site.uottawa.ca/~diana/csi4107/index.html">course website</a>.</p>
+        <p>All content © Diana Inkpen | Visit the <a href="https://www.site.uottawa.ca/~diana/csi4107/index.html" target="_blank">course website</a>.</p>
     </footer>
     <script src="script.js"></script>
 </body>
