--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CSI4107: Information Retrieval</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <header>
