--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>CSI4107: Information Retrieval</h1>
+        <h1>CSI 4107: Winter 25</h1>
         <button id="toggle-dark-mode">Dark Mode</button>
     </header>
     <main>
