--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSI4107: Information Retrieval</title>
+    <title>CSI 4107</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <header>
-        <h1>CSI 4107: Winter 25</h1>
+        <h1>CSI 4107: Information Retrieval</h1>
         <button id="toggle-dark-mode">Dark Mode</button>
     </header>
     <main>
